name:                haskell-lang
version:             0.0.0
synopsis:            Haskell web site.
description:         Haskell web site.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2014 Chris Done
category:            Web
build-type:          Simple
cabal-version:       >=1.8
data-files:          static/css/*.css
                     static/css/*.min.css
                     static/fonts/Haskell.dev.svg
                     static/fonts/Haskell.eot
                     static/fonts/Haskell.svg
                     static/fonts/Haskell.ttf
                     static/fonts/Haskell.woff
                     static/fonts/glyphicons-halflings-regular.ttf
                     static/fonts/glyphicons-halflings-regular.svg
                     static/fonts/glyphicons-halflings-regular.eot
                     static/fonts/glyphicons-halflings-regular.woff
                     static/css/haskell.font.css
                     static/img/*.ico
                     static/img/*.jpg
                     static/img/*.png
                     static/img/*.svg
                     static/js/*.js
                     static/js/*.min.js
                     static/js/jquery.console.js
                     static/js/jquery.cookie.js
                     static/js/tryhaskell.pages.js
                     static/js/warp.reload.js
                     static/markdown/*.md
                     static/report/haskell2010/*.css
                     static/report/haskell2010/*.html
                     static/report/haskell2010/*.png

flag library-only
  default: False
  description: Do not build the executable
  manual: True

library
  hs-source-dirs:    src/
  ghc-options:       -Wall
                     -O2
                     -fno-warn-type-defaults
  build-depends:     base >= 4 && < 5
                   , aeson
                   , async
                   , blaze-builder
                   , blaze-html
                   , blaze-markup
                   , bytestring
                   , conduit
                   , conduit-extra
                   , deepseq
                   , directory
                   , exceptions
                   , fast-logger
                   , filepath
                   , foreign-store
                   , hscolour
                   , http-conduit
                   , http-types
                   , lifted-base
                   , lucid
                   , markdown
                   , monad-extras
                   , mtl
                   , pandoc
                   , pandoc-types
                   , resourcet
                   , spoon
                   , tagstream-conduit
                   , text
                   , containers
                   , time
                   , transformers
                   , vector
                   , wai-logger
                   , warp
                   , xml-conduit
                   , yaml
                   , yesod
                   , yesod-core
                   , yesod-gitrev
                   , yesod-static
                   , yesod-newsfeed
                   , yesod-sitemap
                   , split
                   , random
                   , safe-exceptions
                   , network-uri

  exposed-modules:   HL.Controller
                     HL.Controller.Community
                     HL.Controller.Deprecated
                     HL.Controller.Documentation
                     HL.Controller.GetStarted
                     HL.Controller.Html
                     HL.Controller.Intero
                     HL.Controller.Tutorial
                     HL.Controller.Announcements
                     HL.Controller.Home
                     HL.Controller.Irc
                     HL.Controller.MailingLists
                     HL.Controller.Markdown
                     HL.Controller.News
                     HL.Controller.Packages
                     HL.Controller.Feed
                     HL.Controller.Standard
                     HL.Controller.SuccessStories
                     HL.Dispatch
                     HL.Foundation
                     HL.Main
                     HL.Model.Markdown
                     HL.Model.News
                     HL.Model.Packages
                     HL.Model.Snippets
                     HL.Model.Tutorial
                     HL.Static
                     HL.Types
                     HL.View
                     HL.View.Code
                     HL.View.Community
                     HL.View.Documentation
                     HL.View.GetStarted
                     HL.View.Announcements
                     HL.View.Home
                     HL.View.Home.Features
                     HL.View.Home.Whyhaskell
                     HL.View.Markdown
                     HL.View.News
                     HL.View.Template
                     HL.View.Packages
                     Paths_haskell_lang
                     Yesod.Caching
                     Yesod.Lucid
                     Yesod.Slug

executable haskell-lang
  hs-source-dirs:    app/
  ghc-options:       -Wall
                     -O2
                     -threaded
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5
                   , haskell-lang
  if flag(library-only)
    buildable:       False

test-suite haskell-lang-test
  type:              exitcode-stdio-1.0
  main-is:           test/Main.hs
  build-depends:     base
                   , haskell-lang
                   , hspec
                   , text
                   , bytestring
                   , conduit
                   , conduit-extra
                   , filepath
                   , resourcet
                   , transformers
                   , yesod-static
                   , blaze-builder
                   , yesod-gitrev
                   , yesod-core
                   , yesod-newsfeed
                   , markdown
                   , blaze-html
                   , blaze-markup
                   , lucid
                   , hscolour
                   , containers
                   , aeson
                   , directory
                   , vector
                   , yaml
                   , yesod
                   , http-conduit
                   , safe-exceptions
                   , wai-logger
                   , fast-logger
                   , lifted-base
                   , mtl
                   , time
                   , monad-extras
                   , network-uri
                   , spiderweb
                   , warp
