name:                hl
version:             0.0.0
synopsis:            Haskell web site.
description:         Haskell web site.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2014 Chris Done
category:            Web
build-type:          Simple
cabal-version:       >=1.8
data-files:          static/css/*.css
                     static/css/*.min.css
                     static/css/fonts/Haskell.dev.svg
                     static/css/fonts/Haskell.eot
                     static/css/fonts/Haskell.svg
                     static/css/fonts/Haskell.ttf
                     static/css/fonts/Haskell.woff
                     static/css/haskell.font.css
                     static/img/*.ico
                     static/img/*.jpg
                     static/img/*.png
                     static/img/*.svg
                     static/js/*.js
                     static/js/*.min.js
                     static/js/jquery.console.js
                     static/js/jquery.cookie.js
                     static/js/tryhaskell.pages.js
                     static/js/warp.reload.js
                     static/markdown/*.md
                     static/report/haskell2010/*.css
                     static/report/haskell2010/*.html
                     static/report/haskell2010/*.png

executable hl
  hs-source-dirs:    src/
  ghc-options:       -Wall
                     -O2
                     -fno-warn-unused-do-bind
                     -fno-warn-type-defaults
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5
                   , blaze-markup
                   , blaze-html
                   , lucid
                   , bytestring
                   , conduit
                   , deepseq
                   , directory
                   , fast-logger
                   , filepath
                   , foreign-store
                   , hscolour
                   , http-conduit
                   , lifted-base
                   , markdown
                   , monad-extras
                   , mtl
                   , pandoc
                   , pandoc-types
                   , spoon
                   , tagstream-conduit
                   , text
                   , text-icu
                   , wai-logger
                   , warp
                   , xml-conduit
                   , yesod
                   , yesod-core
                   , yesod-static
